--- a/src/client/common/forms/input.scss
+++ b/src/client/common/forms/input.scss
@@ -27,7 +27,7 @@ $_font-scale: 1;
   border: $input-border;
   border-radius: 2px;
   flex-grow: 1;
-  min-width: 10em;
+  min-width: 1em;
   padding: $_padding;
   text-overflow: ellipsis;
 
